- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 4.9.26-26-g9785399 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.6.0.0 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXXX - YYYYYYYY
- Tested to be compatible on new Microsoft Windows 10.
- Better JPEG optimizations by allowing to run jhead when metadata should be copied too (Jaff).
- Do not convert SVG to SVGZ (JoeW).
- Updated Leanify to 0.4.2.64 daily binaries.
- Updated ImageMagick to 6.9.1.10 with HDRI support.
- Updated gifsicle to 1.88 (custom build).
- Updated TruePNG to 0.6.0.0.
- Updated to NSIS 3.0 beta 2.
- Upgraded distributions to 7-Zip 15.06.


7.80 - 2015/06/01
- Fixed an incompatibility with Windows XP introduced in 7.50 by unsupported COPY_FILE_NO_BUFFERING flag that makes CopyFileEx API function fail (Vivil).
- Fixed lossy PNG optimization was performed even if "allow lossy" was unchecked (guindos98, alex, Newtomic).
- Tested over mapped and unmapped network shares.
- Keep rotation on EXIF rotated JPEG images, even if metadata is stripped (Jaff).
- Updated ImageMagick to 6.9.14.
- Updated tidy-html5 to 4.9.26-26-g9785399 patched to be Windows XP compatible.
- Updated Leanify to 0.4.2.45 daily binaries.
- Updated mozjpeg to 3.10.
- Updated jpegoptim to 1.4.3 (custom built).
- Upgraded distributions to 7-Zip 15.03.

7.70 - 2015/05/17
- Added a new PNG option to optionalally allow lossy PNG recompression support with pngquant 2.4.0 (Jack Cherng).
- Made higher compression profiles, optimize better at a cost of extra processing time. Now on best setting, we are using 30 zopfli iterations instead of 9 (SvenBent).
- Added MNG files detection by content.
- Added WinRAR SFX detection to exclude processing like we did with Inno Setup (SvenBent).
- Fixed regression on files with uppercase extensions, compression ratio was less than in 7.40 and before. (Jaff).